Fixed horizontal overflow

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,12 @@
+html,
+body {
+  height: auto;
+}
+
+.main {
+  max-width: 100%;
+}
+
 #navbar {
   width: 100%;
   height: 10vh;
@@ -16,6 +25,7 @@
 
 .container {
   height: auto;
+  width: 100%;
   background-color: #282828;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -36,6 +46,7 @@
   display: -ms-grid;
   display: grid;
   padding: 2rem 0;
+  max-width: 100%;
 }
 
 .card {
@@ -124,6 +135,8 @@
           align-items: flex-start;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  max-width: 100%;
+  height: auto;
 }
 
 .india-card {
